cmake_minimum_required(VERSION 2.8.12)

find_package(Boost REQUIRED regex system)
find_package(wxWidgets REQUIRED)

include(${wxWidgets_USE_FILE})

add_definitions(-std=c++11)

set(magicseteditor_SOURCES
	src/main.cpp
	src/cli/cli_main.cpp
	src/cli/win32_cli_wrapper.cpp
	src/cli/text_io_handler.cpp
	src/gfx/rotate_image.cpp
	src/gfx/generated_image.cpp
	src/gfx/color.cpp
	src/gfx/polynomial.cpp
	src/gfx/combine_image.cpp
	src/gfx/bezier.cpp
	src/gfx/resample_text.cpp
	src/gfx/resample_image.cpp
	src/gfx/image_effects.cpp
	src/gfx/mask_image.cpp
	src/gfx/blend_image.cpp
	src/script/value.cpp
	src/script/script_manager.cpp
	src/script/functions/basic.cpp
	src/script/functions/regex.cpp
	src/script/functions/editor.cpp
	src/script/functions/construction.cpp
	src/script/functions/spelling.cpp
	src/script/functions/image.cpp
	src/script/functions/english.cpp
	src/script/functions/export.cpp
	src/script/dependency.cpp
	src/script/parser.cpp
	src/script/context.cpp
	src/script/image.cpp
	src/script/profiler.cpp
	src/script/scriptable.cpp
	src/script/script.cpp
	src/gui/preferences_window.cpp
	src/gui/profiler_window.cpp
	src/gui/symbol/basic_shape_editor.cpp
	src/gui/symbol/point_editor.cpp
	src/gui/symbol/part_list.cpp
	src/gui/symbol/symmetry_editor.cpp
	src/gui/symbol/selection.cpp
	src/gui/symbol/window.cpp
	src/gui/symbol/editor.cpp
	src/gui/symbol/select_editor.cpp
	src/gui/symbol/control.cpp
	src/gui/card_select_window.cpp
	src/gui/control/card_list.cpp
	src/gui/control/gallery_list.cpp
	src/gui/control/keyword_list.cpp
	src/gui/control/graph.cpp
	src/gui/control/image_card_list.cpp
	src/gui/control/card_viewer.cpp
	src/gui/control/native_look_editor.cpp
	src/gui/control/select_card_list.cpp
	src/gui/control/item_list.cpp
	src/gui/control/text_ctrl.cpp
	src/gui/control/card_editor.cpp
	src/gui/control/filtered_card_list.cpp
	src/gui/control/filter_ctrl.cpp
	src/gui/control/package_list.cpp
	src/gui/control/tree_list.cpp
	src/gui/control/card_list_column_select.cpp
	src/gui/package_update_list.cpp
	src/gui/drop_down_list.cpp
	src/gui/value/symbol.cpp
	src/gui/value/package_choice.cpp
	src/gui/value/color.cpp
	src/gui/value/text.cpp
	src/gui/value/multiple_choice.cpp
	src/gui/value/editor.cpp
	src/gui/value/information.cpp
	src/gui/value/choice.cpp
	src/gui/value/image.cpp
	src/gui/packages_window.cpp
	src/gui/set/keywords_panel.cpp
	src/gui/set/panel.cpp
	src/gui/set/random_pack_panel.cpp
	src/gui/set/window.cpp
	src/gui/set/stats_panel.cpp
	src/gui/set/cards_panel.cpp
	src/gui/set/style_panel.cpp
	src/gui/set/console_panel.cpp
	src/gui/set/set_info_panel.cpp
	src/gui/html_export_window.cpp
	src/gui/new_window.cpp
	src/gui/thumbnail_thread.cpp
	src/gui/util.cpp
	src/gui/welcome_window.cpp
	src/gui/auto_replace_window.cpp
	src/gui/image_slice_window.cpp
	src/gui/about_window.cpp
	src/gui/print_window.cpp
	src/gui/images_export_window.cpp
	src/gui/update_checker.cpp
	src/gui/icon_menu.cpp
	src/code_template.cpp
	src/util/error.cpp
	src/util/file_utils.cpp
	src/util/alignment.cpp
	src/util/string.cpp
	src/util/tagged_string.cpp
	src/util/age.cpp
	src/util/action_stack.cpp
	src/util/regex.cpp
	src/util/vcs.cpp
	src/util/rotation.cpp
	src/util/spec_sort.cpp
	src/util/spell_checker.cpp
	src/util/version.cpp
	src/util/io/get_member.cpp
	src/util/io/package_manager.cpp
	src/util/io/writer.cpp
	src/util/io/reader.cpp
	src/util/io/package.cpp
	src/util/vcs/subversion.cpp
	src/render/symbol/viewer.cpp
	src/render/symbol/filter.cpp
	src/render/value/symbol.cpp
	src/render/value/package_choice.cpp
	src/render/value/color.cpp
	src/render/value/viewer.cpp
	src/render/value/text.cpp
	src/render/value/multiple_choice.cpp
	src/render/value/information.cpp
	src/render/value/choice.cpp
	src/render/value/image.cpp
	src/render/text/symbol.cpp
	src/render/text/viewer.cpp
	src/render/text/element.cpp
	src/render/text/font.cpp
	src/render/text/compound.cpp
	src/render/card/viewer.cpp
	src/data/field.cpp
	src/data/keyword.cpp
	src/data/symbol.cpp
	src/data/game.cpp
	src/data/pack.cpp
	src/data/field/symbol.cpp
	src/data/field/package_choice.cpp
	src/data/field/color.cpp
	src/data/field/text.cpp
	src/data/field/multiple_choice.cpp
	src/data/field/boolean.cpp
	src/data/field/information.cpp
	src/data/field/choice.cpp
	src/data/field/image.cpp
	src/data/locale.cpp
	src/data/add_cards_script.cpp
	src/data/card.cpp
	src/data/export_template.cpp
	src/data/symbol_font.cpp
	src/data/format/mtg_editor.cpp
	src/data/format/mse1.cpp
	src/data/format/clipboard.cpp
	src/data/format/image_to_symbol.cpp
	src/data/format/html.cpp
	src/data/format/apprentice.cpp
	src/data/format/formats.cpp
	src/data/format/image.cpp
	src/data/format/mws.cpp
	src/data/format/mse2.cpp
	src/data/set.cpp
	src/data/installer.cpp
	src/data/font.cpp
	src/data/statistics.cpp
	src/data/action/keyword.cpp
	src/data/action/symbol.cpp
	src/data/action/value.cpp
	src/data/action/symbol_part.cpp
	src/data/action/set.cpp
	src/data/stylesheet.cpp
	src/data/word_list.cpp
	src/data/settings.cpp
)

add_executable(magicseteditor
	${magicseteditor_SOURCES}
)

target_include_directories(magicseteditor PUBLIC
	src
	${Boost_INCLUDE_DIRS}
	${wxWidgets_INCLUDE_DIRS}
)
target_link_libraries(magicseteditor
	hunspell-1.3
	${Boost_LIBRARIES}
	#${Boost_regex_LIBRARY}
	${wxWidgets_LIBRARIES}
)
